--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
 			<version>1.0.2</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+	
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>2.1.10.RELEASE</version>
+		</dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
