--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>2.1.10.RELEASE</version>
+			<version>3.2.1</version>
 		</dependency>
  </dependencies>
 
