--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/bank_manager
-spring.datasource.username=admin
-spring.datasource.password=admin
-
-spring.jpa.generate-ddl=true
-
-server.port=8081
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=postgresql
