--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
             <version>42.7.1</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+
  </dependencies>
 
 	<build>
